--- a/index.html
+++ b/index.html
@@ -57,7 +57,18 @@
         </div>
         <div class="row">
             <div class="col-md">
-                <!-- TODO 1 -->
+                <div class="col-md ss-pizza p-3 m-2 rounded">
+                <article>
+                    <header>Пицца «Сардиния» (Sarda)</header>
+                    <img src="img/pizza19.jpg" class="img-thumbnail rounded float-start me-3">
+                    <p>Пицца с томатным соусом, моцареллой, сыром пекорино и острой салями.</p>
+                    <button type="button" class="btn btn-outline-danger btn-lg">Заказать</button>
+                    <footer style="clear: both;" class="pt-1 d-flex flex-row-reverse align-items-center">
+                        <img src="img/IS22C_Skvortsova_AO.jpg" alt="" srcset="">
+                        <p>Скворцова Анастасия Олеговна</p>
+                    </footer>
+                </article>
+            </div>
             </div>
             <div class="col-md">
                 <!-- TODO 2 -->
