Добавлена новая пицца от Скворцовой Анастасии ИС-22Б

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <article>
                     <header>Пицца «Сардиния» (Sarda)</header>
                     <img src="img/pizza19.jpg" class="img-thumbnail rounded float-start me-3">
-                    <p>Пицца с томатным соусом, моцареллой, сыром пекорино и острой салями.</p>
+                    <p>Пицца с томатным соусом, моцареллой, сыром пекорино и острой салями</p>
                     <button type="button" class="btn btn-outline-danger btn-lg">Заказать</button>
                     <footer style="clear: both;" class="pt-1 d-flex flex-row-reverse align-items-center">
                         <img src="img/IS22C_Skvortsova_AO.jpg" alt="" srcset="">
